[package]
name = "polkadot-rpc"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-chain-spec = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-consensus-babe-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-consensus-epochs = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-finality-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-finality-grandpa-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sc-sync-state-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
pallet-mmr-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
pallet-transaction-payment-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
beefy-gadget = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
beefy-gadget-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
substrate-state-trie-migration-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
