[package]
name = "polkadot-rpc"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-chain-spec = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-consensus-babe-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-consensus-epochs = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-finality-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-finality-grandpa-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-sync-state-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
pallet-mmr-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
pallet-transaction-payment-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
beefy-gadget = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
beefy-gadget-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
substrate-state-trie-migration-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
