[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-chain-spec = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-consensus-babe-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-consensus-epochs = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-finality-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-finality-grandpa-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-sync-state-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
mmr-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-transaction-payment-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
beefy-gadget = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
beefy-gadget-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
substrate-state-trie-migration-rpc = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
