[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.37" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
