[package]
name = "pallet-treasury"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage treasury"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
impl-trait-for-tuples = "0.2.2"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
frame-benchmarking = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay", optional = true }
frame-support = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay" }
frame-system = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay" }
pallet-balances = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay" }
sp-runtime = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay" }
sp-std = { git = "https://github.com/zycon91/substrate", default-features = false , branch = "temp-relay" }

[dev-dependencies]
sp-core = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }
sp-io = { git = "https://github.com/zycon91/substrate", branch = "temp-relay" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
