[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
frame-benchmarking-cli = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }

sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-storage = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-inherents = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-timestamp = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-finality-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-transaction-pool = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.38" }

sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sc-executor = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.38" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.38" }

beefy-primitives = { git = "https://github.com/CherryNetwork/substrate", package = "sp-beefy" , branch = "upgrade-to-v0.9.38" }

# Polkadot Runtimes
cherry-runtime = { path = "../../runtime/cherry", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["cherry"]
cherry = ["cherry-runtime"]
rococo = ["rococo-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "cherry-runtime/runtime-metrics",
]
