[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-benchmarking-cli = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-storage = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-inherents = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-timestamp = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus-beefy = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-consensus-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-transaction-pool = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-executor = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

# Polkadot Runtimes
cherry-runtime = { path = "../../runtime/cherry", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["cherry"]
cherry = ["cherry-runtime"]
rococo = ["rococo-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "cherry-runtime/runtime-metrics",
]
