[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
frame-benchmarking-cli = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

sp-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-storage = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-blockchain = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-inherents = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-timestamp = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus-babe = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus-beefy = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-consensus-grandpa = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-transaction-pool = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-block-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }

sc-consensus = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-executor = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-client-api = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-service = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }

# Polkadot Runtimes
cherry-runtime = { path = "../../runtime/cherry", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["cherry"]
cherry = ["cherry-runtime"]
rococo = ["rococo-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "cherry-runtime/runtime-metrics",
]
