[package]
name = "polkadot-node-subsystem-test-helpers"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.53"
futures = "0.3.21"
parking_lot = "0.12.0"
polkadot-node-subsystem = { path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sc-keystore = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-application-crypto = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

[dev-dependencies]
polkadot-overseer = { path = "../overseer" }
