[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.40" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "upgrade-to-v0.9.40" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "upgrade-to-v0.9.40" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", features = ["std"] , branch = "upgrade-to-v0.9.40" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
